--- a/views/about-us.pug
+++ b/views/about-us.pug
@@ -12,11 +12,11 @@ block content
       a(href=`/newsfeed` class="nav-item") Home
   .layout 
     .intro__container 
-      h1#header1 We all have an escape. We developers, choose Travel.
-      p#description By re-creating the publishing platform 'Medium', we present to you Travelscape. A place where stories, adventures, and conversations are shared. In hopes to venture  into the undiscovered fascinations of the world.
+      h1#header1 We all have an escape. We developers choose Travel.
+      p#description By re-creating the publishing platform 'Medium', we present to you TravelScape. A place where stories, adventures, and conversations are shared. In hopes to venture  into the undiscovered fascinations of the world.
         //- button(type='click' class='github-repo') Our Repository on GitHub
       div#git-button
-        a#git-link(href='https://github.com/jemcodes/travelScape') Our Repository on GitHub
+        a#git-link(href='https://github.com/jemcodes/travelScape' target='_blank') Our Repository on GitHub
     .bio__container
       .bio__container-person
         .developer Eunice Park
@@ -24,9 +24,9 @@ block content
           .bio
             //- p.name Eunice Park 
             .developer__links
-              a.links#github(href='https://github.com/euniceparkk') Github
-              a.links#linkedin(href='https://www.linkedin.com/in/euniceparkk/') Linkedin
-            .developer__story By re-creating the publishing platform 'Medium', we present to you Travelscape. A place where stories, adventures, and conversations are shared. In hopes to venture into the undiscovered fascinations of the world.
+              a.links#github(href='https://github.com/euniceparkk' target='_blank') Github
+              a.links#linkedin(href='https://www.linkedin.com/in/euniceparkk/' target='_blank') Linkedin
+            .developer__story After 3 years, I graduated in 2019 with a B.S. in Business. Upon gradation, I pursued law school. However, in the midst of acceptances, I realized my passion for software development. I wanted to pursue a career that was personally more fulfilling and tech does exactly that. Software development allows me to channel my creativity, work collaboratively with others, and instill a problem-solving mentality. With that, I aspire to transition as a Full-Stack Software Engineer.
 
       .bio__container-person
         .developer Jamie Sullivan
@@ -34,9 +34,9 @@ block content
           .bio 
             //- p.name Jamie Sullivan 
             .developer__links
-              a.links#github(href='https://github.com/bilbopicard') Github
-              a.links#linkedin(href='https://www.linkedin.com/in/sullivan-jamie/') Linkedin
-            .developer__story By re-creating the publishing platform 'Medium', we present to you Travelscape. A place where stories, adventures, and conversations are shared. In hopes to venture into the undiscovered fascinations of the world.
+              a.links#github(href='https://github.com/bilbopicard' target='_blank') Github
+              a.links#linkedin(href='https://www.linkedin.com/in/sullivan-jamie/' target='_blank') Linkedin
+            .developer__story After years behind the bar creating craft cocktails I wanted to try something new. That led me to the world of computers and programming and code where my creative juices can still flow. The more I learn the less I feel I know.
 
       .bio__container-person
         .developer jane Martin
@@ -44,9 +44,9 @@ block content
           .bio 
             //- p.name Jane Martin 
             .developer__links
-              a.links#github(href='https://github.com/jemcodes') Github
-              a.links#linkedin(href='https://www.linkedin.com/in/jemcodes/') Linkedin
-            .developer__story By re-creating the publishing platform 'Medium', we present to you Travelscape. A place where stories, adventures, and conversations are shared. In hopes to venture into the undiscovered fascinations of the world.
+              a.links#github(href='https://github.com/jemcodes' target='_blank') Github
+              a.links#linkedin(href='https://www.linkedin.com/in/jemcodes/' target='_blank') Linkedin
+            .developer__story Programming brings together my passions for building, creating, and problem-solving. Before coming to the coding world, I worked several lifetimes' worth of creative and analytical careers, from founding and managing companies to voiceover work to digging deep into disability law - and almost everything else in between. As a multipotentialite, I'm thrilled to see where this programming journey takes me!
 
       .bio__container-person
         .developer Patrick Nusbaum
@@ -54,7 +54,7 @@ block content
           .bio 
             //- p.name Patrick Nusbaum
             .developer__links
-              a.links#github(href='https://github.com/patricknuttree') Github
-              a.links#linkedin(href='https://www.linkedin.com/in/patrick-nusbaum-mpa') Linkedin
-            .developer__story By re-creating the publishing platform 'Medium', we present to you Travelscape. A place where stories, adventures, and conversations are shared. In hopes to venture into the undiscovered fascinations of the world.
+              a.links#github(href='https://github.com/patricknuttree' target='_blank') Github
+              a.links#linkedin(href='https://www.linkedin.com/in/patrick-nusbaum-mpa' target='_blank') Linkedin
+            .developer__story I initially got into software development through my previous career in fundraising and sales. When working within CRMs, I found myself digging deeper into the programs to find new ways to handle processes. I realized there was only so far I could go with my knowledge base, but that depth didn't satisfy my curiosity. Learning software development has given me the proverbial shovel to continue digging for exciting answers and new ways of doing things.
   include footer.pug
