finished readme and finalized details

--- a/views/about-us.pug
+++ b/views/about-us.pug
@@ -13,7 +13,8 @@ block content
   .layout 
     .intro__container 
       h1#header1 We all have an escape. We developers choose Travel.
-      p#description By re-creating the publishing platform 'Medium', we present to you TravelScape. A place where stories, adventures, and conversations are shared. In hopes to venture  into the undiscovered fascinations of the world.
+      p#description By re-creating the publishing platform 'Medium', we present to you TravelScape. 
+      p#description Our TravelScape Full-Stack Project opens up communication between travelers near and far. Here, your vacation stories come to life and inspire adventures for the friends you make along the way. From tales of the well-traveled to dream vacations shared by the wanderer-at-heart, our goal is that every page will take you on a new journey.
         //- button(type='click' class='github-repo') Our Repository on GitHub
       div#git-button
         a#git-link(href='https://github.com/jemcodes/travelScape' target='_blank') Our Repository on GitHub
